...
        backgroundColor: Colors.transparent,
        // Turns the App Bar invisible
        elevation: 0.0,
        // Button used to go to the previous screen
        leading: const BackButton(
          color: Colors.blueGrey,
          key: Key('gender-back-button'),
        ),
      ),
      body: Container(
        alignment: Alignment.center,
        padding: const EdgeInsets.symmetric(vertical: 20.0, horizontal: 50.0),
        child: Form(
...
              // Padding
              const SizedBox(
                height: 20.0,
              ),
              CustomButton1(
                // Displays the choice
                keyValue: Key('other'),
                text: 'Other',
                // Upon tapping the button. Transfer choice to variable and move to the next screen.
                onPressed: () async {
                  gender = "Other";
                  Navigator.push(
                    context,
...
