...
        backgroundColor: Colors.transparent,
        // Turns the App Bar invisible
        elevation: 0.0,
        // Button used to go to the previous screen
        leading: const BackButton(
          color: Colors.blueGrey,
          key: Key('age-back-button'),
        ),
      ),
      body: Container(
        padding: const EdgeInsets.symmetric(vertical: 20.0, horizontal: 50.0),
        child: Form(
          child: Column(
...
              ),
              Expanded(
                child: Container(), // puts our elevatedButton at the bottom.
              ),
              // Creation of button to go to next screen
              ElevatedButton(
                key: Key('age-next'),
                // Checks if the value entered is an integer
                onPressed: () {
                  if (_currentValue >= 0) {
                    // Brings us to the Gender Selection Screen while passing our data
                    Navigator.push(
                      context,
...
